# PolyHook_2_0

./: .gitignore  BUILD.TXT  BuildCapstoneUnix.sh  CMakeLists.txt  README.md  azure-pipelines.yml
UnitTests/: TestDetourx64.cpp  TestDetourx86.cpp  TestMemProtector.cpp
headers/: ADisassembler.hpp  CapstoneDisassembler.hpp  Enums.hpp  ErrorLog.hpp  IHook.hpp  Instruction.hpp  MemProtector.hpp  Misc.hpp  PageAllocator.hpp
headers/Detour/: ADetour.hpp  x64Detour.hpp  x86Detour.hpp
headers/Virtuals/: VTableSwapHook.hpp
sources/: ADetour.cpp  CapstoneDisassembler.cpp  Instruction.cpp  MemProtector.cpp  TestEffectTracker.cpp  x64Detour.cpp  x86Detour.cpp
